--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<app-menu></app-menu>
+
+<div style="margin-top: 200px">
+    <nav class="navbar navbar-dark bg-primary">
+        <form class="form-inline">
+          <input class="form-control mr-sm-4" type="text" value="Bangalore" disabled='true' aria-label="Search">
+          <select class="form-control mr-sm-4">
+            <option *ngFor="let package of packages" [value]='package.packageName'>{{package.packageName}} - Rs.{{package.rate}}</option>
+          </select>
+          <input class="form-control mr-sm-4" type="date"  aria-label="Search">
+        </form>
+        <button class="btn btn-success my-2 my-sm-0 pull-right" type="submit">Submit</button>
+      </nav>
+</div>
+
