--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -1,1 +1,33 @@
-<p>booking works!</p>
+<app-menu></app-menu>
+
+<div class="card" style="width: 63rem;margin: auto; margin-top: 100px">
+  <div class="card-body">
+    <h5 class="card-title">Select driver</h5>
+      <div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Filter by language</label>
+                <select class="form-control mr-sm-4" (change)="filterByLanguage($event.target.value)">
+                  <option value=' ' ></option>
+                  <option *ngFor="let language of languages" >{{language}}</option>
+                </select>
+
+              </div>
+              <div class="row">
+                <div class="card" style="width: 18rem; margin: 2%" *ngFor="let driver of filteredDrivers">
+                    <div class="card-body">
+                      <h5 class="card-title">{{driver.fullName}}</h5>
+                      <div class="card-text">
+                        <ul style="list-style-type:none;">
+                          <li><span class="font-weight-bold">Email: </span>{{driver.email}}</li>
+                          <li><span class="font-weight-bold">Mobile: </span>{{driver.mobile}}</li>
+                          <li><span class="font-weight-bold">Language: </span>{{driver.language}}</li>
+                          <li><span class="font-weight-bold">Car: </span>{{driver.car}}</li>
+                        </ul>
+                      </div>
+                      <button class="btn btn-success float-right" (click)="goToConfirmBooking(driver)">Select</button>
+                    </div>
+                  </div>
+              </div>
+      </div>
+  </div>
+</div>
