--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,12 +6,12 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li *ngIf="isLoggedIn" class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <button *ngIf="isLoggedIn" class="btn btn-outline-success my-2 my-sm-0" >Logout</button>
+        <button *ngIf="isLoggedIn" class="btn btn-outline-success my-2 my-sm-0" (click)="logOut()" >Logout</button>
       </form>
     </div>
   </nav>
