--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -24,9 +24,15 @@
                           <li><span class="font-weight-bold">Car: </span>{{driver.car}}</li>
                         </ul>
                       </div>
-                      <button class="btn btn-success float-right" (click)="goToConfirmBooking(driver)">Select</button>
+                      <button class="btn btn-success float-right" (click)="selectDriver(driver)">Select</button>
+
                     </div>
                   </div>
+
+              </div>
+              <div class="text-center">
+                  <span class="text-center" *ngIf="selectedDriver">Selected driver: {{selectedDriver?.fullName}}</span> <br> <br>
+                <button class="btn btn-success" (click)="goToConfirmBooking()">Book</button>
               </div>
       </div>
   </div>
